------------------------------------------------------------------------------
CHANGELOG
------------------------------------------------------------------------------
2006-12-10  Robert Ancell  <bob27@users.sourceforge.net>
	* Enable accidentally disabled GConf support.
	* Save window size to configuration.
	* Fix incorrect UCI 'position' command.

2006-12-09  Dennis Cranston  <dennis_cranston@yahoo.com>

	* glade/ai.glade:
	* glade/load_game.glade:
	* glade/new_game.glade:
	* glade/network_game.glade:
	* glade/save_game.glade:  HIG fixes: capitalization, spacing, 
	mnemonic conflicts.
	
2006-12-09  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* Fix Bug #382057 – assumed paths in python files, by importing
	pyexecdir into python path.

2006-12-09  Andreas Røsdal  <andrearo@pvv.ntnu.no>
	* Fix Bug #381580 – glchess doesn't respect the menu layout selected.

2006-12-07  Robert Ancell  <bob27@users.sourceforge.net>
	* Added Fruit and Amundsen engines to autodetect list.
	* Tell UCI engines they have 5 mins to play to cause them to take time
	  choosing moves.
	* Dynamically generate about dialog.
	* Fix bug loading UCI games.
	* Catch exceptions when reading from chess engines.
	* Ignore escaped PGN data - this allows the loading of games from the
	  Knights chess interface.

2006-12-01  Robert Ancell  <bob27@users.sourceforge.net>
	* Added configuration module that uses GConf when available

2006-11-27  Robert Ancell  <bob27@users.sourceforge.net>
	* Applied HIG patch from (Gnome bug #379294).
	* Disable "Save As" menu item when no game selected.
	* Send 'ucinewgame' and 'position startpos' to UCI chess engines

2006-11-22  Robert Ancell  <bob27@users.sourceforge.net>
        * Support loading of multiple games from the command line.
        * Don't autosave games that were loaded from/save to a file.
        * Ask user which loaded/saved games to save on quit.
	* Added "Save As" menu option.

2006-11-18  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* about.glade.in: