@@ -1,6 +1,11 @@
 ------------------------------------------------------------------------------
 CHANGELOG
 ------------------------------------------------------------------------------
+2006-12-16  Andreas Røsdal  <andrearo@pvv.ntnu.no>
+
+	* Add some initial documentation. It still needs a lot of work,
+	hopefully the gnome documentation project will write something better.
+
 2006-12-10  Robert Ancell  <bob27@users.sourceforge.net>
 	* Enable accidentally disabled GConf support.
 	* Save window size to configuration.
